z-index fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -84,7 +84,7 @@ a:focus {
   width:100%;
   height:28px;
   background-image:url(stripeback.png);
-    z-index:10;
+  z-index:1;
 }
 #search_container{
   margin-left:36px;
